fix(metadata): replace iterator calls with getFirst() for improved readability