@@ -134,7 +134,7 @@ public class KomgaService {
                 }
                 
                 if (!seriesBooks.isEmpty()) {
-                    Long libId = seriesBooks.get(0).getLibrary().getId();
+                    Long libId = seriesBooks.getFirst().getLibrary().getId();
                     KomgaSeriesDto seriesDto = komgaMapper.toKomgaSeriesDto(seriesName, libId, seriesBooks);
                     if (seriesDto != null) {
                         content.add(seriesDto);
